Оберни локал сторадж и добавь цвета

--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,17 @@
   --font-sans:
     "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+  --color-primary-50: #f3faf7;
+  --color-primary-100: #def7ec;
+  --color-primary-200: #bcf0da;
+  --color-primary-300: #84e1bc;
+  --color-primary-400: #31c48d;
+  --color-primary-500: #0e9f6e;
+  --color-primary-600: #057a55;
+  --color-primary-700: #046c4e;
+  --color-primary-800: #03543f;
+  --color-primary-900: #014737;
 }
 
 html,
